--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumina Terra</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
     <link rel="stylesheet" href="vendor/css/jquery-ui.min.css">
@@ -17,7 +17,7 @@
         <div class="container">
             <nav>
                 <div class="left-side">
-                    <a href="#">
+                    <a href="index.html">
                         <img src="images/logo.png" alt="" class="img-fluid logo">
                     </a>
                 </div>
@@ -28,6 +28,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <ul class="nav-list">
+                        <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt="" class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
@@ -68,7 +69,7 @@
                         <div class="content-wrapper">
                             <img src="images/vector-icon-01.png" alt="" class="img-fluid">
                             <h2 class="heading-primary">welcome to Lumina terra</h2>
-                            <a href="#" class="globalbtn-one">know more</a>
+                            <a href="about-us.html" class="globalbtn-one">know more</a>
                         </div>
                     </div>
                 </div>
@@ -79,12 +80,173 @@
                 <div class="sustaible-grid">
                     <div class="sustaible-grid-item">
                         <h2 class="heading-primary">The World’s Most <br>Outstanding Sustainable School</h2>
+                        <div class="border-bottom"></div>
                         <div class="content-para">
                             <p>At Lumina Terra, we redefine education as a transformative journey where sustainability, innovation, creativity, & leadership converge. Our mission is to prepare students to become global leaders and changemakers of tomorrow. Derived from Latin, Terra means Earth or land, symbolizing sustainability and a profound connection to the natural world. Nova Terra represents a “New Earth,” blending environmental stewardship with educational innovation to inspire meaningful transformation.</p>
                         </div>
                     </div>
                     <div class="sustaible-grid-item">
                         <div class="img-wrapper"><img src="images/sustainable-01.jpg" alt="" class="img-fluid"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="signature-strength p-top p-bottom">
+            <div class="container">
+                <h2 class="heading-primary">Signature Strengths</h2>
+                <div class="border-one"></div>
+                <div class="signature-grid">
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-01.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Child-Led Exploration</span>
+                            </div>
+                            <h4 class="heading-tertiary">Child-Led Exploration</h4>
+                        </div>
+                    </div>
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-02.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Personalized Learning</span>
+                            </div>
+                            <h4 class="heading-tertiary">Personalized Learning</h4>
+                        </div>
+                    </div>
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-03.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Nature & Sensory Integration</span>
+                            </div>
+                            <h4 class="heading-tertiary">Nature & Sensory Integration</h4>
+                        </div>
+                    </div>
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-04.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Creative Expression & STEAM Focus</span>
+                            </div>
+                            <h4 class="heading-tertiary">Creative Expression & STEAM Focus</h4>
+                        </div>
+                    </div>
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-05.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Future-Ready Skills</span>
+                            </div>
+                            <h4 class="heading-tertiary">Future-Ready Skills</h4>
+                        </div>
+                    </div>
+                    <div class="signature-grid-item">
+                        <div class="card-strenth">
+                            <div class="img-wrapper">
+                                <img src="images/strength-06.jpg" alt="" class="img-fluid">
+                                <span class="wrapperText">Sustainability-Focused</span>
+                            </div>
+                            <h4 class="heading-tertiary">Sustainability-Focused</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="educational-visioners p-top p-bottom">
+            <div class="container">
+                <h2 class="heading-primary">Educational Visionaries</h2>
+                <div class="border-one"></div>
+                <div class="educational-grid">
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-01.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Ms. Bharti Gandhi</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-02.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Dr. Sunita Gandhi</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-03.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Inger Mette Stenseth</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-04.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Manish Jain</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-05.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Vijay Sinha</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-06.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Jon Corippo</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-0.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Fred Medrick</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-07.jpg" alt="" class="img-fluid" style="object-position: 25% 100%;">
+                        </div>
+                        <h4 class="heading-tertiary">Paulo Freire</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-08.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Irmeli Halinen</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-0.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Pirjo Koivula</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-09.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Aicha Bah Diallo</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-10.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Rickie Dhillon</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-11.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Olivier</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-0.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Michael</h4>
+                    </div>
+                    <div class="educational-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/visionaries/education-0.jpg" alt="" class="img-fluid">
+                        </div>
+                        <h4 class="heading-tertiary">Isabella</h4>
                     </div>
                 </div>
             </div>
