--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                             <img src="images/vector-icon-01.png" alt="" class="img-fluid">
                             <h2 class="heading-primary">welcome to Lumina terra</h2>
                             <a href="about-us.html" class="globalbtn-one">know more</a>
+                            <a href="about-us.html" class="globalbtn-three">know more</a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +109,7 @@
                     <div class="signature-grid-item">
                         <div class="card-strenth">
                             <div class="img-wrapper">
-                                <img src="images/strength-02.jpg" alt="" class="img-fluid">
+                                <img src="images/strength-02.jpg" alt="" class="img-fluid" style="object-position: 15% 100%;">
                                 <span class="wrapperText">Personalized Learning</span>
                             </div>
                             <h4 class="heading-tertiary">Personalized Learning</h4>
@@ -144,7 +145,7 @@
                     <div class="signature-grid-item">
                         <div class="card-strenth">
                             <div class="img-wrapper">
-                                <img src="images/strength-06.jpg" alt="" class="img-fluid">
+                                <img src="images/strength-06.jpg" alt="" class="img-fluid" style="object-position: 100%;">
                                 <span class="wrapperText">Sustainability-Focused</span>
                             </div>
                             <h4 class="heading-tertiary">Sustainability-Focused</h4>
