--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                         <span class="icon-bar"></span>
                     </button>
                     <ul class="nav-list">
-                        <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt="" class="img-fluid logo"></a></li>
+                        <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt=""
+                                    class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
@@ -83,7 +84,12 @@
                         <h2 class="heading-primary">The World’s Most <br>Outstanding Sustainable School</h2>
                         <div class="border-bottom"></div>
                         <div class="content-para">
-                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability, innovation, creativity, & leadership converge. Our mission is to prepare students to become global leaders and changemakers of tomorrow. Derived from Latin, Terra means Earth or land, symbolizing sustainability and a profound connection to the natural world. Nova Terra represents a “New Earth,” blending environmental stewardship with educational innovation to inspire meaningful transformation.</p>
+                            <p>At Lumina Terra, we redefine education as a transformative journey where sustainability,
+                                innovation, creativity, & leadership converge. Our mission is to prepare students to
+                                become global leaders and changemakers of tomorrow. Derived from Latin, Terra means
+                                Earth or land, symbolizing sustainability and a profound connection to the natural
+                                world. Nova Terra represents a “New Earth,” blending environmental stewardship with
+                                educational innovation to inspire meaningful transformation.</p>
                         </div>
                     </div>
                     <div class="sustaible-grid-item">
@@ -104,15 +110,23 @@
                                 <span class="wrapperText">Child-Led Exploration</span>
                             </div>
                             <h4 class="heading-tertiary">Child-Led Exploration</h4>
+                            <div class="content-para">
+                                <p>Learning through inquiry, projects, and hands-on discovery.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="signature-grid-item">
                         <div class="card-strenth">
                             <div class="img-wrapper">
-                                <img src="images/strength-02.jpg" alt="" class="img-fluid" style="object-position: 15% 100%;">
+                                <img src="images/strength-02.jpg" alt="" class="img-fluid"
+                                    style="object-position: 15% 100%;">
                                 <span class="wrapperText">Personalized Learning</span>
                             </div>
                             <h4 class="heading-tertiary">Personalized Learning</h4>
+                            <div class="content-para">
+                                <p>Children progress based on their skills, with personalized goals and detailed
+                                    reports.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="signature-grid-item">
@@ -122,6 +136,9 @@
                                 <span class="wrapperText">Nature & Sensory Integration</span>
                             </div>
                             <h4 class="heading-tertiary">Nature & Sensory Integration</h4>
+                            <div class="content-para">
+                                <p>Outdoor learning spaces, gardening, and hands-on science exploration.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="signature-grid-item">
@@ -131,6 +148,9 @@
                                 <span class="wrapperText">Creative Expression & STEAM Focus</span>
                             </div>
                             <h4 class="heading-tertiary">Creative Expression & STEAM Focus</h4>
+                            <div class="content-para">
+                                <p>Robotics, art, music, and storytelling to nurture innovation.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="signature-grid-item">
@@ -140,15 +160,23 @@
                                 <span class="wrapperText">Future-Ready Skills</span>
                             </div>
                             <h4 class="heading-tertiary">Future-Ready Skills</h4>
+                            <div class="content-para">
+                                <p>Problem-solving, collaboration, and leadership from an early age.</p>
+                            </div>
                         </div>
                     </div>
                     <div class="signature-grid-item">
                         <div class="card-strenth">
                             <div class="img-wrapper">
-                                <img src="images/strength-06.jpg" alt="" class="img-fluid" style="object-position: 100%;">
+                                <img src="images/strength-06.jpg" alt="" class="img-fluid"
+                                    style="object-position: 100%;">
                                 <span class="wrapperText">Sustainability-Focused</span>
                             </div>
                             <h4 class="heading-tertiary">Sustainability-Focused</h4>
+                            <div class="content-para">
+                                <p>An eco-conscious school using natural materials, integrating sustainable learning,
+                                    and fostering environmental awareness.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -203,7 +231,8 @@
                     </div>
                     <div class="educational-grid-item">
                         <div class="img-wrapper">
-                            <img src="images/visionaries/education-07.jpg" alt="" class="img-fluid" style="object-position: 25% 100%;">
+                            <img src="images/visionaries/education-07.jpg" alt="" class="img-fluid"
+                                style="object-position: 25% 100%;">
                         </div>
                         <h4 class="heading-tertiary">Paulo Freire</h4>
                     </div>
