--- a/about-us.html
+++ b/about-us.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
     <link rel="stylesheet" href="vendor/css/jquery-ui.min.css">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
 </head>
 
 <body>
@@ -30,9 +30,9 @@
                     <ul class="nav-list">
                         <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt="" class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
-                        <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li>
+                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li>
+                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -40,18 +40,18 @@
         </div>
     </header>
     <main>
-        <section class="inner-hero-section" style="background-image: url(./images/about-head-bg-01.jpg);">
+        <section class="inner-hero-section">
+            <img src="images/why-lumina-bg-01.jpg" alt="" class="img-fluid">
             <h1>about us</h1>
         </section>
-        <section class="what-lumina p-top p-bottom">
+        <!-- <section class="what-lumina p-top p-bottom">
             <div class="container">
                 <h2 class="heading-primary">What is Lumina Terra?</h2>
             <div class="border-one"></div>
             <div class="what-lumnia-grid">
                 <div class="what-lumnia-grid-item">
                     <div class="content-para">
-                        <p>Lumina Terra is a distinguished educational institution nestled in the vibrant city of Lucknow, India.</p>
-                        <p>Lumina Terra is built on many decades of family legacy of running the world’s largest school—City Montessori School, Lucknow. This rich heritage is combined with the extensive global experience of its founder, Dr. Sunita Gandhi, a renowned educator, innovator, researcher, and author. Dr. Gandhi has established schools in Iceland and the Czech Republic and has studied educational systems in 50 countries.</p>
+                        <p>Lumina Terra is where sustainability and education come together, located in the vibrant city of Lucknow, India. Built on many decades of family legacy from running the world’s largest school—City Montessori School, Lucknow—this rich heritage is combined with the extensive global experience of its founder, Dr. Sunita Gandhi. A renowned educator, innovator, researcher, and author, Dr. Gandhi has established schools in Iceland and the Czech Republic and has studied educational systems in 50 countries.</p>
                     </div>
                 </div>
                 <div class="what-lumnia-grid-item">
@@ -61,8 +61,8 @@
                 </div>
             </div>
             </div>
-        </section>
-        <section class="about-alfa p-top p-bottom">
+        </section> -->
+        <!-- <section class="about-alfa p-top p-bottom">
             <div class="container">
                 <h2 class="heading-primary"><img src="images/vector-icon-01.png" class="vect">About ALfA?</h2>
             <div class="border-one"></div>
@@ -80,23 +80,78 @@
                 </div>
             </div>
             </div>
+        </section> -->
+        <section class="why-lumina p-top p-bottom">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h2 class="heading-primary">Why Lumina Terra?</h2>
+                        <div class="border-one"></div>
+                        <div class="content-para">
+                            <p>Lumina Terra is where sustainability and education converge, situated in the vibrant city of Lucknow, India. A sustainable school, crafted by global experts and architects, supported by evidence and designed to shape the future. Our name reflects our aspiration to empower students to reach for the skies and realize their full potential. We believe in cultivating a learning environment where every individual can soar to new heights of achievement and fulfillment. We remain steadfast in our mission to provide a well-rounded education that prepares students for success in a rapidly evolving world</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="img-wrapper">
+                            <img src="images/why-us-01.jpg" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="mission-vision">
+            <div class="container">
+                <div class="mission-grid">
+                    <div class="mission-item">
+                        <h2 class="heading-primary">Our Mission</h2>
+                        <div class="content-para">
+                            <p>At Lumina Terra, we provide a nurturing environment where every child, as the light of the world, can develop essential 21st-century skills and traits. We strive to cultivate confident, compassionate, and capable leaders who positively contribute to society. Our mission reflects the belief that education should serve humanity, fostering noble qualities in each individual.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="vision-item">
+                        <h2 class="heading-primary">Our Vision</h2>
+                        <div class="content-para">
+                            <p>We envision Lumina Terra, School of Nations, as a lighthouse guiding students toward a future where they thrive in an interconnected world. Our students will possess the skills, traits, and knowledge to make meaningful contributions to their communities and beyond, embodying unity, service, and the power of light in shaping a better world.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="education-goal p-top p-bottom">
+            <div class="container">
+                <h2 class="heading-primary">Goal of Education</h2>
+                <div class="border-one"></div>
+                <div class="what-lumnia-grid">
+                    <div class="what-lumnia-grid-item">
+                        <div class="content-para">
+                            <p>At Lumina Terra, we believe education is about more than just academic success. Our goal is to help students develop the skills and values they need to face life's challenges with confidence and resilience. Through a curriculum focused on practical life skills, we aim to shape well-rounded individuals who can succeed in all areas of life. This aligns with our belief that education should help students grow in service to others and contribute to positive change in their communities and beyond.</p>
+                        </div>
+                    </div>
+                    <div class="what-lumnia-grid-item">
+                        <div class="img-wrapper">
+                            <img src="images/why-us-02.jpg" alt="" class="img-fluid" style="object-position: 69% 100%;">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <section class="our-beliefs p-top p-bottom">
             <div class="container">
                 <h2 class="heading-primary text-center">Our Beliefs</h2>
                 <div class="border-one"></div>
-                <div class="content-para first">
+                <div class="content-para text-center">
                     <p>Our core values are the cornerstone of everything we do at Lumina Terra, reflecting principles of education:<br>
                         Lumina Terra is not just a place of learning; it is a hub of inspiration and transformation. Together, we strive to empower our students to reach for the sky and beyond, shaping a future filled with promise and possibility, guided by principles on education.</p>
                 </div>
-                <div class="row">
+                <!-- <div class="row">
                     <div class="col-md-4">
                         <div class="card">
                             <div class="img-wrapper"><img src="" alt="" class="img-fluid"></div>
                             <div class="card-content">
                                 <h4 class="heading-four">Excellence in All Things</h4>
                                 <div class="content-para">
-                                    <p>We uphold the belief that childrenshould be given the opportunity tomaster every kind of learning andbecome skilled in all branches ofknowledge and arts. </p>
+                                    <p>We uphold the belief that children should be given the opportunity to master every kind of learning and become skilled in all branches of knowledge and arts. </p>
                                 </div>
                             </div>
                         </div>
@@ -107,7 +162,7 @@
                             <div class="card-content">
                                 <h4 class="heading-four">Emphasis on 4C Skills</h4>
                                 <div class="content-para">
-                                    <p>Critical thinking, Creativity,Collaboration, and Communication areintegral to our curriculum, empoweringstudents to thrive in the globalcommunity of the 21st century, inalignment with the emphasis on theacquisition of knowledge and thecultivation of intellectual faculties. </p>
+                                    <p>Critical thinking, Creativity, Collaboration, and Communication are integral to our curriculum, empowering students to thrive in the global community of the 21st century, in alignment with the emphasis on the acquisition of knowledge and the cultivation of intellectual faculties. </p>
                                 </div>
                             </div>
                         </div>
@@ -118,13 +173,13 @@
                             <div class="card-content">
                                 <h4 class="heading-four">Cultivation of 4C Traits</h4>
                                 <div class="content-para">
-                                    <p>The 4C Traits (Character, ClimateConsciousness, Connectedness, andCitizenship) are essential qualities thatwe seek to instill in every student,preparing them to face challenges withgrace and integrity, reflecting theemphasis on the development of moraland spiritual qualities. ​</p>
+                                    <p>The 4C Traits (Character, Climate Consciousness, Connectedness, and Citizenship) are essential qualities that we seek to instill in every student, preparing them to face challenges with grace and integrity, reflecting the emphasis on the development of moraland spiritual qualities. ​</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="content-para last">
+                </div> -->
+                <div class="content-para text-center">
                     <p>Lumina Terra is not just a place of learning; it is a hub of inspiration and transformation. Together, we strive to empower our students to reach for the sky and beyond, shaping a future filled with promise and possibility, guided by principles on education.</p>
                 </div>
                 <div class="link-wrapper two">
