--- a/contact-us.html
+++ b/contact-us.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="vendor/css/owl.carousel.min.css">
     <link rel="stylesheet" href="vendor/css/jquery-ui.min.css">
-    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="css/main.min.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
@@ -30,9 +31,9 @@
                     <ul class="nav-list">
                         <li class="mobile-logo"><a href="index.html"><img src="images/logo.png" alt="" class="img-fluid logo"></a></li>
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
-                        <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li>
+                        <!-- <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li> -->
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li>
+                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
@@ -40,9 +41,44 @@
         </div>
     </header>
     <main>
-        <section class="inner-hero-section" style="background-image: url(./images/our-facilities-bg-01.jpg);">
+        <section class="inner-hero-section">
+            <img src="images/about-head-bg-01.jpg" alt="" class="img-fluid">
             <h1>contact us</h1>
         </section>
+        <div class="contact-form m-top">
+            <div class="container">
+                <div class="row">
+                    
+                    <div class="col-md-7" style="margin: auto; float: none;">
+                        <div class="contact-venue">
+                            <ul class="contact-venue__list">
+                                <li class="contact-venue__list-item">
+                                    <span class="contact-venue__list-icon">
+                                        <i aria-hidden="true" class="fas fa-map-marker-alt"></i>
+                                    </span>
+                                    <span class="contact-venue__list-text">Lumina Terra School, Opposite Palassio Mall, Lucknow, Uttar Pradesh, India, 226010</span>
+                                    </span>
+                                </li>
+                                <li class="contact-venue__list-item">
+
+
+                                    <span class="contact-venue__list-icon">
+                                        <i aria-hidden="true" class="fas fa-phone"></i> </span>
+                                    <span class="contact-venue__list-text"><a href="tel:+91-740%20840%206000">+91-740
+                                            840 5000</a></span>
+                                </li>
+                                <li class="contact-venue__list-item">
+                                    <span class="contact-venue__list-icon">
+                                        <i aria-hidden="true" class="fas fa-envelope"></i> </span>
+                                    <span class="contact-venue__list-text"><a href="mailto:info@luminaterra.org">info@luminaterra.org</a></span>
+                                </li>
+                            </ul>
+                        </div>
+                        <iframe src="https://forms.gle/A2PqCFi7486vxwwi6" width="100%" height="3100px" style="border:none;"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 
     <script src="vendor/js/jquery.min.js"></script>
