--- a/instructor.html
+++ b/instructor.html
@@ -32,7 +32,7 @@
                         <li class="nav-item"><a href="about-us.html" class="nav-link">about us</a></li>
                         <li class="nav-item"><a href="pricing.html" class="nav-link">pricing</a></li>
                         <li class="nav-item"><a href="program.html" class="nav-link">program</a></li>
-                        <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li>
+                        <!-- <li class="nav-item"><a href="instructor.html" class="nav-link">instructor</a></li> -->
                         <li class="nav-item"><a href="contact-us.html" class="nav-button">contact us</a></li>
                     </ul>
                 </div>
